# hotswitch

./: .gitignore  Cargo.toml  LICENSE  PLAN.md  README.md  config.toml.example
.github/workflows/: build.yml  release.yml
proto/: Cargo.toml
proto/src/: audio.rs  icon.rs  keymap.rs  lib.rs
receiver/: Cargo.toml  build.rs
receiver-service/: Cargo.toml
receiver-service/src/: main.rs
receiver/src/: main.rs
scripts/: build-sender-app.sh  generate-sender-app-icon.py  install-hotswitch.ps1  start-hotswitch.ps1  uninstall-hotswitch.ps1
sender/: Cargo.toml
sender/src/: main.rs
