[package]
name = "hotswitch-receiver-service"
version = "0.1.0"
edition = "2021"
license = "MIT"

[target.'cfg(windows)'.dependencies]
windows-service = "0.7"

[target.'cfg(windows)'.dependencies.windows]
version = "0.58"
features = [
  "Win32_Foundation",
  "Win32_Security",
  "Win32_System_RemoteDesktop",
  "Win32_System_Threading",
]

