[package]
name = "hotswitch-receiver"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
hotswitch-proto = { path = "../proto" }
tray-icon = "0.21"
tao = "0.34"
self_update = { version = "0.42", default-features = false, features = ["rustls", "archive-zip", "compression-zip-deflate"] }

[target.'cfg(windows)'.dependencies.windows]
version = "0.58"
features = [
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_Registry",
]
